--- a/contrib/provisioning/roles/cuttlefish/tasks/main.yml
+++ b/contrib/provisioning/roles/cuttlefish/tasks/main.yml
@@ -17,6 +17,7 @@
       - rsync
       - nginx
       - build-essential
+      - sudo
 
 - name: site available
   template: src=cuttlefish.conf.j2
@@ -34,6 +35,12 @@
         state=present
         shell=/bin/bash
         groups=adm,ssl-cert
+
+- name: cuttlefish is a sudoer
+  copy: src=sudoers.d/cuttlefish dest=/etc/sudoers.d/cuttlefish
+        mode=600
+        owner=root
+        group=root
 
 - name: ssh folder
   file: path=/home/cuttlefish.ssh
