--- a/contrib/provisioning/roles/cuttlefish/tasks/main.yml
+++ b/contrib/provisioning/roles/cuttlefish/tasks/main.yml
@@ -34,7 +34,7 @@
   user: name=cuttlefish
         state=present
         shell=/bin/bash
-        groups=adm,ssl-cert
+        groups=ssl-cert
 
 - name: cuttlefish is a sudoer
   copy: src=sudoers.d/cuttlefish dest=/etc/sudoers.d/cuttlefish
