Fix: name is missing.

--- a/contrib/provisioning/roles/cuttlefish-app/tasks/main.yml
+++ b/contrib/provisioning/roles/cuttlefish-app/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: copy source
-  synchronize: src=../../../../..   dest=/home/
+  synchronize: src=../../../../..   dest=/home/cuttlefish/
       rsync_opts="--exclude 'contrib' --exclude 'provisioning'  --exclude='.vagrant' --exclude='.env' --exclude='config/database.yml'"
   notify: restart cuttlefish
   #--exclude='.git'
