--- a/contrib/provisioning/roles/cuttlefish/files/systemd/cuttlefish-smtp.service
+++ b/contrib/provisioning/roles/cuttlefish/files/systemd/cuttlefish-smtp.service
@@ -12,6 +12,7 @@ ExecStart=/usr/bin/bundle exec rake cuttlefish:smtp RAILS_ENV=production
 KillMode=process
 Restart=on-failure
 CPUAccounting=true
+SyslogIdentifier=cuttlefish_smtp
 
 [Install]
 WantedBy=multi-user.target
