--- a/contrib/provisioning/roles/cuttlefish/files/systemd/cuttlefish-workers.service
+++ b/contrib/provisioning/roles/cuttlefish/files/systemd/cuttlefish-workers.service
@@ -13,6 +13,7 @@ KillMode=process
 Restart=on-failure
 CPUAccounting=true
 SyslogIdentifier=cuttlefish_workers
+SyslogFacility=local6
 
 [Install]
 WantedBy=multi-user.target
