Better Nginx or not

--- a/contrib/provisioning/roles/cuttlefish/defaults/main.yml
+++ b/contrib/provisioning/roles/cuttlefish/defaults/main.yml
@@ -2,3 +2,5 @@
 
 cuttlefish_private_key: /etc/ssl/private/ssl-cert-snakeoil.key
 cuttlefish_cert: /etc/ssl/certs/ssl-cert-snakeoil.pem
+use_dhparam: false
+use_nginx: true
