--- a/contrib/provisioning/roles/cuttlefish/tasks/main.yml
+++ b/contrib/provisioning/roles/cuttlefish/tasks/main.yml
@@ -43,7 +43,7 @@
                create=/etc/ssl/private/dhparam.pem
 
     - name: ensure Nginx is started
-      service: name=ngix state=started enabled=yes
+      service: name=nginx state=started enabled=yes
 
   when: use_nginx
   tags: nginx
