--- a/contrib/provisioning/roles/cuttlefish/tasks/main.yml
+++ b/contrib/provisioning/roles/cuttlefish/tasks/main.yml
@@ -38,16 +38,16 @@
       when: "{{ not nginx_conf_is_fqdn }}"
       notify: restart nginx
 
-    - name: site available
+    - name: site available when conf name is fqdn
       template: src=cuttlefish.conf.j2
-                dest=/etc/nginx/sites-available/{{ cuttlefish_domain }}.conf
+                dest=/etc/nginx/sites-available/{{ cuttlefish_domain }}
       when: "{{ nginx_conf_is_fqdn }}"
       notify: restart nginx
 
-    - name: site enabled
+    - name: site enabled when conf name is fqdn
       file: state=link
-            src=/etc/nginx/sites-available/{{ cuttlefish_domain }}.conf
-            dest=/etc/nginx/sites-enabled/{{ cuttlefish_domain }}.conf
+            src=/etc/nginx/sites-available/{{ cuttlefish_domain }}
+            dest=/etc/nginx/sites-enabled/{{ cuttlefish_domain }}
       when: "{{ nginx_conf_is_fqdn }}"
       notify: restart nginx
 
